// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropSearch.svelte > should render 1`] = `
<div>
  <input-select
    class="flex flex-col relative open"
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="w-full flex items-center"
      role="option"
      tabindex="-1"
    >
      <span
        class="flex flex-grow"
      >
        <input
          class="w-full border-none bg-transparent p-0"
          type="text"
        />
      </span>
       
      <icon
        aria-label="opened"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-opened"
        />
      </icon>
    </selected-item>
     
    <scroll
      class="flex flex-col absolute w-full z-10 overflow-scroll menu"
      style="top: 0px; animation: __svelte_3328443287_0 50ms linear 0ms 1 both;"
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="-1"
      >
         
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          
           
          <p>
            1
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          
           
          <p>
            2
          </p>
          
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          
           
          <p>
            3
          </p>
          
           
        </item>
      </list>
    </scroll>
  </input-select>
</div>
`;

exports[`DropSearch.svelte > should work with custom components 1`] = `
<div>
  <input-select
    class="flex flex-col relative open"
    role="listbox"
    tabindex="0"
  >
    <selected-item
      aria-selected="false"
      class="w-full flex items-center"
      role="option"
      tabindex="-1"
    >
      <span
        class="flex flex-grow"
      >
        <input
          class="w-full border-none bg-transparent p-0"
          type="text"
        />
      </span>
       
      <icon
        aria-label="opened"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="selector-opened"
        />
      </icon>
    </selected-item>
     
    <scroll
      class="flex flex-col absolute w-full z-10 overflow-scroll menu"
      style="top: 0px; animation: __svelte_3328443287_0 50ms linear 0ms 1 both;"
    >
      <list
        aria-label="list"
        class="flex flex-col w-full flex-shrink-0 select-none list"
        role="listbox"
        tabindex="-1"
      >
         
        <item
          aria-selected="false"
          class="item"
          data-path="0"
          role="option"
        >
          <span>
            Alpha
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="1"
          role="option"
        >
          <span>
            Beta
          </span>
           
        </item>
        <item
          aria-selected="false"
          class="item"
          data-path="2"
          role="option"
        >
          <span>
            Charlie
          </span>
           
        </item>
      </list>
    </scroll>
  </input-select>
</div>
`;
